--- a/r6-tracker/package.json
+++ b/r6-tracker/package.json
@@ -9,13 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "next": "15.5.4",
     "primeicons": "^7.0.0",
-    "r6operators": "^2.12.0",
-    "r6s-stats-api": "^1.3.0",
+    "r6-data.js": "^1.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-redux": "^9.2.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
