--- a/r6-tracker/package.json
+++ b/r6-tracker/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
     "next": "15.5.4",
     "primeicons": "^7.0.0",
     "r6-data.js": "^1.3.4",
