--- a/r6-tracker/.gitignore
+++ b/r6-tracker/.gitignore
@@ -13,6 +13,12 @@
 # testing
 /coverage
 
+# Cypress
+cypress/videos
+cypress/screenshots
+cypress/downloads
+cypress.config.ts.timestamp-*
+
 # next.js
 /.next/
 /out/
