--- a/r6-tracker/package.json
+++ b/r6-tracker/package.json
@@ -8,6 +8,11 @@
     "start": "next start",
     "lint": "eslint",
     "test:quick": "node quick-test.js",
+    "test": "cypress run",
+    "test:open": "cypress open",
+    "test:headless": "cypress run --headless",
+    "test:chrome": "cypress run --browser chrome",
+    "test:firefox": "cypress run --browser firefox",
     "optimize:images": "node scripts/resize-images.js --dir public/images --max-edge 1600 --quality 80 --in-place --verbose",
     "optimize:images:dry": "node scripts/resize-images.js --dir public/images --max-edge 1600 --quality 80 --dry-run --verbose"
   },
@@ -19,16 +24,17 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.552.0",
     "mongoose": "^8.19.2",
     "next": "15.5.4",
+    "next-auth": "^5.0.0-beta.30",
     "primeicons": "^7.0.0",
     "r6-data.js": "^1.3.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "zod": "^4.1.12",
-    "zustand": "^5.0.8"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cypress": "^15.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "sharp": "^0.34.4",
