--- a/r6-tracker/package.json
+++ b/r6-tracker/package.json
@@ -13,6 +13,10 @@
     "test:headless": "cypress run --headless",
     "test:chrome": "cypress run --browser chrome",
     "test:firefox": "cypress run --browser firefox",
+    "test:navigation": "cypress run --spec 'cypress/e2e/pages-navigation.cy.ts'",
+    "test:functionality": "cypress run --spec 'cypress/e2e/functionality.cy.ts'",
+    "test:auth": "cypress run --spec 'cypress/e2e/auth.cy.ts'",
+    "test:all": "cypress run --spec 'cypress/e2e/**/*.cy.ts'",
     "optimize:images": "node scripts/resize-images.js --dir public/images --max-edge 1600 --quality 80 --in-place --verbose",
     "optimize:images:dry": "node scripts/resize-images.js --dir public/images --max-edge 1600 --quality 80 --dry-run --verbose"
   },
@@ -21,7 +25,6 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.22",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
@@ -43,6 +46,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cypress": "^15.5.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "sharp": "^0.34.4",
