--- a/r6-tracker/package.json
+++ b/r6-tracker/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
+    "build": "next build",
+    "build:turbo": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "test:quick": "node quick-test.js",
@@ -31,6 +33,7 @@
     "mongoose": "^8.19.2",
     "next": "15.5.4",
     "next-auth": "^5.0.0-beta.30",
+    "next-intl": "^4.4.0",
     "primeicons": "^7.0.0",
     "r6-data.js": "^1.3.4",
     "react": "19.1.0",
